Remove a DCHECK in GpuChannelMessageFilter

GpuChannelMessageFilter::OnFilterRemoved asserts |channel_| is non null.
This is no longer true after r430159 or 8b29f417639226c3 [formerly 0e85f1d17a35bbe7], since in new code,
ChannelProxy calls MessageFilter::OnFilterRemoved even when the channel
is closed while the filter registration is pending.

This CL just removes the assertion, since null |channel_| should be harmless
here.

BUG=662693,662688
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2482053002
Cr-Commit-Position: refs/heads/master@{#430862}

Former-commit-id: 8826eda8787c97736f2b671a2548dbcafd0b89aa