android_webview/javatests/src/org/chromium/android_webview/test/AwContentsTest.java
@@ -32,7 +32,6 @@ import org.chromium.android_webview.test.util.JSUtils;
 import org.chromium.base.annotations.SuppressFBWarnings;
 import org.chromium.base.test.util.CallbackHelper;
 import org.chromium.base.test.util.CommandLineFlags;
-import org.chromium.base.test.util.DisabledTest;
 import org.chromium.base.test.util.Feature;
 import org.chromium.base.test.util.parameter.ParameterizedTest;
 import org.chromium.content.browser.BindingManager;
@@ -81,7 +80,6 @@ public class AwContentsTest extends AwTestBase {
 
     @LargeTest
     @Feature({"AndroidWebView"})
-    @DisabledTest(message = "crbug.com/662688")  // Crashes flakily.
     public void testCreateLoadDestroyManyTimes() throws Throwable {
         for (int i = 0; i < 10; ++i) {
             AwTestContainerView testView = createAwTestContainerViewOnMainSync(mContentsClient);
